@@ -53,7 +53,7 @@ DEB_CLASSPATH = $(ANT_HOME)/lib/ant.jar:$(ANT_HOME)/lib/ant-launcher.jar:$(shell
 # Set compile.debug and compile.optimize depending on DEB_BUILD_OPTIONS to
 # match the behaviour of C/C++ programs
 DEB_ANT_ARGS = -Dcompile.debug=true
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
 	DEB_ANT_ARGS += -Dcompile.optimize=false
 else
 	DEB_ANT_ARGS += -Dcompile.optimize=true
