@@ -51,7 +51,7 @@ common-install-arch common-install-indep:: common-install-impl
 common-install-impl::
 	$(if $(DEB_ANT_INSTALL_TARGET),$(DEB_ANT_INVOKE) $(DEB_ANT_INSTALL_TARGET),@echo "DEB_ANT_INSTALL_TARGET unset, skipping default ant.mk common-install target")
 
-ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 common-build-arch common-build-indep:: debian/stamp-ant-check
 debian/stamp-ant-check: debian/stamp-ant-build
 	$(if $(DEB_ANT_CHECK_TARGET),$(DEB_ANT_INVOKE) $(DEB_ANT_CHECK_TARGET),@echo "DEB_ANT_CHECK_TARGET unset, not running checks")
